# sbayt-cli-anubis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.es.md  README.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml
anubis/: main.py  utils.py
anubis/tasks/: airflow.py  docker.py  misc.py  spark.py
serket/: main.py  utils.py
serket/tasks/: aws.py  bitwarden.py  check.py  docker.py  misc.py
seshat/: main.py  tasks.py  utils.py
seshat/tasks/: aws.py
src/: README.md  __init__.py  hello_world.py
tests/: conftest.py
tests/integration/: test_integration_hello_world.py
tests/unit/: test_hello_world.py
